add jewels section, change jpeg images to webp, shortened home css

--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -5,16 +5,7 @@
     border: 2px solid black;
 }
 
-.groupShop {
+.grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-}
-
-.womenShop {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-}
-
-.menShop {
-
 }
