--- a/src/Styles/CardItem.css
+++ b/src/Styles/CardItem.css
@@ -1,15 +1,34 @@
 .card {
+    background-color: rgb(255, 255, 255);
     padding: 10px;
     display: flex;
+    flex-direction: column;
+    width: min-content;
+    border: 2px solid black;
+    border-radius: 20px;
+    width: 350px;
+    box-shadow: 0 0 15px 3px grey;
+    transition: .5s;
 }
 
+.card:hover {
+    scale: 1.05;
+}
+
+
 .card img {
+    width: 300px;
+    height: 400px;
     padding: 10px;
-    width: 220px;
 }
 
 .cardInfo {
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
+}
+
+.cardButton {
+    display: flex;
+    justify-content: space-around;
 }
