--- a/src/Styles/nav.css
+++ b/src/Styles/nav.css
@@ -23,10 +23,13 @@ li {
     top: 30px;
     right: -24px;
     width: max-content;
+    z-index: 999;
 }
 
 .dropDown button {
     display: flex;
+    width: 170px;
+    justify-content: center;
 }
 
 .align {
