--- a/src/Styles/CardItem.css
+++ b/src/Styles/CardItem.css
@@ -1,5 +1,5 @@
 .card {
-    background: linear-gradient(180deg, rgb(255, 255, 255)55% , rgb(175, 175, 91));
+    background: linear-gradient(180deg, rgb(255, 255, 255)60% , rgb(175, 175, 91));
     padding: 10px;
     display: flex;
     flex-direction: column;
@@ -27,8 +27,13 @@
 
 .cardInfo {
     display: flex;
-    justify-content: flex-start;
+    flex-wrap: wrap;
     flex-direction: column;
+}
+
+.cardInfo h2 {
+    
+    font-size: 22px;
 }
 
 .cardButton {
