--- a/src/Styles/cardContainer.css
+++ b/src/Styles/cardContainer.css
@@ -6,3 +6,17 @@
     padding: 15px;
     gap: 30px;
 }
+
+.loading {
+    width: 50px;
+    height: 50px;
+    border: 4px solid rgb(156, 146, 146);
+    border-top: 4px solid rgb(5, 5, 5);
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotatate(0deg) }
+    100% { transform: rotate(360deg); }
+}
