--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -3,34 +3,143 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    margin: 0 auto;
+    gap: 20px;
 }
 
 .main img {
-    width: 610px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 620px;
     height: auto;
-    border-radius: 15px;
-    border: 2px solid black;
     object-fit: contain;
 }
 
+.description {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+    color: #ffff;
+    font-size: 22px;
+}
+
 .grid {
+    align-self: center;
+    width: 1244px;
+    border: 3px solid white;
+    box-shadow: 0 0 15px 3px rgb(29, 28, 28);
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 10px;
 }
 
 .groupShop {
-    background: linear-gradient(90deg, rgba(10, 90, 194, 0.863) 49%, rgb(209, 132, 16) 50%);
+    background: linear-gradient(90deg, rgba(185, 21, 226, 0.815), rgba(33, 33, 221, 0.589));
 }
 
-@media screen and (max-width: 1020px) {
+.groupShop img {
+    border-right: 5px solid #ffff;
+}
+
+.womenShop {
+    background: linear-gradient(90deg,  rgba(33, 33, 221, 0.589), rgba(185, 21, 226, 0.815));
+}
+
+.womenShop img {
+    border-left: 5px solid #ffff;
+}
+
+.menShop {
+    background: linear-gradient(90deg, rgba(185, 21, 226, 0.815), rgba(33, 33, 221, 0.589));
+}
+
+.menShop img {
+    border-right: 5px solid #ffff;
+}
+
+.accessoriesShop {
+    background: linear-gradient(90deg,  rgba(33, 33, 221, 0.589), rgba(185, 21, 226, 0.815));
+}
+
+.accessoriesShop img {
+    border-left: 5px solid #ffff;
+}
+
+.techShop {
+    background: linear-gradient(90deg, rgba(185, 21, 226, 0.815), rgba(33, 33, 221, 0.589));
+}
+
+.techShop img {
+    border-right: 5px solid #ffff;
+}
+
+.attribution {
+    padding: 10px;
+    display: flex;
+    justify-content: flex-end;
+    color: #ffff;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.attribution a {
+    color: #ffff;
+    animation: pulse 2s ease-in-out infinite;
+}
+
+@keyframes pulse {
+    0% {opacity: .2;}
+    50% {opacity: 1;}
+    100% {opacity: .2;}
+}
+
+@media screen and (max-width: 1280px) {
     .main img {
-        width: 440px;
+        width: 420px;
     }
+    .groupShop {
+        display: flex;
+        width: min-content;
+    }
+    
+    .groupShop img {
+        border-right: 0;
+        border-bottom: 5px solid #ffff;
+    }
+
+    .description {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        height: 150px;
+    }
+
+    .womenShop {
+        display: flex;
+        width: min-content;
+    }
+
+    .womenShop img {
+        border-left: 0;
+        border-bottom: 5px solid #ffff;
+    }
+
+    .womenShop div:nth-child(1) {
+        color: #ffff;
+        padding: 10px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        font-size: 18px;
+        gap: 5px;
+        height: 250px;
+    }
+
 
     .main {
         display: flex;
@@ -41,16 +150,10 @@
         justify-content: center;
         flex-direction: column;
     }
-
-    .groupShop {
-        background: linear-gradient(180deg, rgba(10, 90, 194, 0.863) 49%, rgb(209, 132, 16) 50%);
-    }
-
     .womenShop {
         display: flex;
         flex-direction: column-reverse;
     }
-
     .accessoriesShop {
         display: flex;
         flex-direction: column-reverse;
