--- a/src/Styles/CardItem.css
+++ b/src/Styles/CardItem.css
@@ -1,14 +1,15 @@
 .card {
-    background: linear-gradient(180deg, rgb(255, 255, 255)60% , rgb(175, 175, 91));
+    background: linear-gradient(180deg, rgb(255, 254, 254) 58%, rgb(98, 40, 206) 95%);
     padding: 15px;
     display: flex;
     flex-direction: column;
-    width: min-content;
-    border: 2px solid black;
-    border-radius: 20px;
+    justify-content: flex-start;
+    gap: 20px;
+    border: 2px solid #ffff;
+    border-radius: 15px;
     width: 350px;
-    height: 710px;
-    box-shadow: 0 0 15px 3px grey;
+    height: 610px;
+    box-shadow: 0 0 15px 3px rgb(0, 0, 0);
     transition: .5s;
     box-sizing: border-box;
     position: relative;
@@ -35,6 +36,8 @@
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+    gap: 20px;
 }
 
 .cardInfo h2 {
