--- a/src/Styles/cardContainer.css
+++ b/src/Styles/cardContainer.css
@@ -3,6 +3,8 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: center;
+    margin: 0 auto 30px;
     padding: 15px;
     gap: 30px;
 }
