--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -102,6 +102,7 @@
         width: 420px;
     }
     .groupShop {
+        border-radius: 5px;
         display: flex;
         width: min-content;
     }
@@ -116,10 +117,11 @@
         justify-content: center;
         flex-direction: column;
         align-items: center;
-        height: 150px;
+        height: 320px;
     }
 
     .womenShop {
+        border-radius: 5px;
         display: flex;
         width: min-content;
     }
@@ -129,17 +131,41 @@
         border-bottom: 5px solid #ffff;
     }
 
-    .womenShop div:nth-child(1) {
-        color: #ffff;
-        padding: 10px;
+    .menShop {
+        border-radius: 5px;
         display: flex;
-        justify-content: center;
         flex-direction: column;
-        font-size: 18px;
-        gap: 5px;
-        height: 250px;
+        width: min-content;
     }
 
+    .menShop img {
+        border-right: 0;
+        border-bottom: 5px solid #ffff;
+    }
+    
+    .accessoriesShop {
+        border-radius: 5px;
+        display: flex;
+        flex-direction: column;
+        width: min-content;
+    }
+
+    .accessoriesShop img {
+        border-left: 0;
+        border-bottom: 5px solid #ffff;
+    }
+
+    .techShop {
+        border-radius: 5px;
+        display: flex;
+        flex-direction: column;
+        width: min-content;
+    }
+
+    .techShop img {
+        border-right: 0;
+        border-bottom: 5px solid #ffff;
+    }
 
     .main {
         display: flex;
