--- a/src/Styles/productInCart.css
+++ b/src/Styles/productInCart.css
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     border: 2px solid black;
+    background-color: #ffff;
 }
 
 .productInCart img {
@@ -13,7 +14,6 @@
 }
 
 .productInfos {
-    background-color: rgb(233, 238, 238);
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -49,6 +49,17 @@
     display: flex;
     justify-content: center;
     gap: 5px;
+}
+
+.selectBtn button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.selectBtn img {
+    width: 40px;
+    height: 40px;
 }
 
 .selectBtn button {
