--- a/src/Styles/productInCart.css
+++ b/src/Styles/productInCart.css
@@ -1,74 +1,72 @@
-.productInCart {
-    width: 1160px;
+.cartCard {
+    padding: 10px;
+    background-color: #ffff;
     display: flex;
+    gap: 10px;
+    width: 600px;
+    height: 340px;
     position: relative;
     justify-content: center;
-    align-items: center;
-    border: 2px solid black;
-    background-color: #ffff;
 }
 
-.productInCart img {
-    padding: 10px;
-    width: 220px;
+.cardImage {
+    width: 200px;
+    height: 250px;
+}
+
+.cardImage img {
+    display: flex;
+    justify-content: flex-start;
+    width: 200px;
+    height: 250px;
+    object-fit: contain;
+}
+
+.productButtons {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.productButtons button {
+    border: 2px solid black;
+}
+
+.productTitle {
+    margin-bottom: 20px;
 }
 
 .productInfos {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-}
-
-.productTitle {
-    padding: 10px;
 }
 
 .productPrice {
-    padding: 10px;
-    width: min-content;
-}
-
-.productButtons {
-    
-    display: flex;
-    justify-content: space-around;
-    position: relative;
-    bottom: 5px;
-    right: 10px;
-    display: flex;
-    gap: 20px;
-}
-
-.productButtons h3 {
     position: absolute;
-    top: -45px;
-    left: 270px;
+    bottom: 20px;
+}
+
+.removeBtn {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    background-color: red;
+    color: #ffff;
 }
 
 .selectBtn {
     display: flex;
-    justify-content: center;
-    gap: 5px;
-}
-
-.selectBtn button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    gap: 10px;
 }
 
 .selectBtn img {
-    width: 40px;
-    height: 40px;
+    width: 15px;
 }
 
-.selectBtn button {
-    width: 60px;
-}
-
-.removeBtn {
-    position: inherit;
-    background-color: rgb(243, 40, 67);
-    height: 50px;
-    bottom: 0px;
+.cartTotal {
+    padding: 10px;
+    position: absolute;
+    bottom: -20px;
+    right: 10px;
 }
