--- a/src/Styles/nav.css
+++ b/src/Styles/nav.css
@@ -7,6 +7,19 @@ li {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color: #fff;
+}
+
+.title {
+    font-size: 25px;
+}
+
+.navBar img {
+    filter: invert();
+}
+
+.navBar a {
+    color: #fff;
 }
 
 .links {
@@ -59,4 +72,20 @@ li {
     position: absolute;
     right: -15px;
     top: -19px;
+}
+
+@media screen and (max-width: 585px) {
+    .navBar {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .links {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
 }
